hot fix, margin instead of spacing and update Readme

--- a/src/components/Carousel/Carousel.sass
+++ b/src/components/Carousel/Carousel.sass
@@ -41,5 +41,4 @@
     font-size: map-get($fonts-paragraphS, 'size')
     line-height:  map-get($fonts-paragraphS, 'line-height')
     font-weight:  map-get($fonts-paragraphS, 'weight')
-    padding: 0px 280px  $layout-96 $spacing-24
-
+    margin: 0px 280px  $layout-96 $layout-24
